apps/cloudform/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
        - name: flask-app
          image: 575589967956.dkr.ecr.ap-south-1.amazonaws.com/flask-eks-rds:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
